--- a/client/style.css
+++ b/client/style.css
@@ -112,9 +112,8 @@ h1, h2, h3, h4, h5, h6, p, span {
 }
 
 .containerku {
-    min-width: 240px !important;
     overflow: hidden;
-    margin: 5px 50px 50px 0px;
+    margin-bottom: 20px;
 }
 
 .cardku {
@@ -191,7 +190,7 @@ h1, h2, h3, h4, h5, h6, p, span {
 .product-price {
     position: absolute;
     background: #0fd252;
-    padding: 7px 20px;
+    padding: 7px 3.5vw;
     text-align: center;
     display: inline-block;
     font-size: 20px;
@@ -212,7 +211,7 @@ h1, h2, h3, h4, h5, h6, p, span {
     color: #0fd252;
     border-radius: 7px;
     margin-left: -5px;
-    right: 40px;
+    right: 3vw;
 }
 
 .product-price b {
@@ -291,13 +290,15 @@ h1, h2, h3, h4, h5, h6, p, span {
 
 #content-box {
     display: flex;
-    height: 100%;
+    height: 100vh;
+    overflow: auto;
 }
 
 #content {
-    width: calc(100% - 75px);
-    height: 100%;
-    padding: calc(2% + 15px);
+    width: calc(100vw - 75px);
+    height: 100vh;
+    padding: calc(2vw + 15px);
+    overflow: auto;
 }
 
 #not-found-title {
@@ -648,7 +649,19 @@ h1, h2, h3, h4, h5, h6, p, span {
 }
 
 .ph-card {
-    min-width: 675px !important;
+    min-width: 475px !important;
+}
+
+.ph-card-title {
+    margin-bottom: 0 !important;
+}
+
+.ph-rate {
+    padding-top: 15px;
+    padding-bottom: 10px;
+    margin-bottom: 15px;
+    border-top: solid 1px rgba(0, 0, 0, 0.1);
+    border-bottom: solid 1px rgba(0, 0, 0, 0.1);
 }
 
 .ph-item-image {
