--- a/client/style.css
+++ b/client/style.css
@@ -386,7 +386,7 @@ h1, h2, h3, h4, h5, h6, p, span {
     padding: 2.5% 7.5%;
     font-size: 14px;
     font-family: 'Roboto', sans-serif;
-    background: rgba(0, 0, 0, 0.1);
+    background: white;
     padding: 10px 20px;
 }
 #upperhalf #signupform #newname {
@@ -554,7 +554,7 @@ h1, h2, h3, h4, h5, h6, p, span {
 }
 
 .adminpromote div input {
-    font-size: 4vw;
+    font-size: calc(15px + 0.5vw);
     padding: 10px 20px;
     width: 100%;
     border: solid 2px rgba(15, 210, 82, 0.5);
